# network-addresser-9000

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  CONTEXT.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codex-review.yml
config/: settings.py  settings_typecheck.py
docs/adr/: 0001-manual-rack-address-ranges.md  0002-network-sizing-dhcp-convention.md  0003-device-addresses-stored-not-immutable.md  0004-audit-trail-covers-mutations.md  0005-django-backend-framework.md  0006-mariadb-database-engine.md  0007-removal-blocks-containers-unassigns-leaves.md  0008-django-auditlog-for-mutation-audit-trail.md
inventory/: admin.py  models.py  suggestions.py  tests.py  validators.py
inventory/management/commands/: sync_roles.py
inventory/migrations/: 0001_initial.py  0002_alter_networkswitchaddress_address_and_more.py  0003_networkdeviceport_unique_device_port_vlan_address_value_and_more.py
inventory/templates/admin/inventory/: _scary_warning.html  delete_confirmation.html  delete_selected_confirmation.html
