[project]
name = "network-addresser-9000"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "DJ"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["config", "inventory"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "auditlog.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings_typecheck"
